# cq-knowledge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_original.md  check_readme.py  deep_check.py  find_garbled.py  fix_encoding.py  fix_encoding2.py  fix_links.py  fix_readme.py  pyproject.toml  test_typer.py  test_typer2.py
.github/workflows/: tests.yml
cq/: __init__.py  cli.py
cq/api/: __init__.py  app.py  routes.py
cq/core/: __init__.py  models.py  scoring.py  storage.py
cq/mcp/: __init__.py  server.py
cq/repositories/: __init__.py  base.py  feedback.py  knowledge.py
docs/: api-reference.md  cli-reference.md  faq.md  getting-started.md  mcp-integration.md
migrations/: 001_initial.sql
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_database.py  test_mcp.py  test_scoring.py
web/: index.html  package.json
web/src/api/: knowledge.ts
web/src/components/: Layout.tsx  SearchBar.tsx
